fix: pom.xml native image build